RESOLVED FIXED172989
getUserMedia request should not be allowed for background tabs unless the tab is already capturing
https://bugs.webkit.org/show_bug.cgi?id=172989
Summary getUserMedia request should not be allowed for background tabs unless the tab...
youenn fablet
Reported 2017-06-06 09:00:56 PDT
getUserMedia request should not be allowed for background tabs unless the tab is already capturing
Attachments
Patch (11.33 KB, patch)
2017-06-06 19:10 PDT, youenn fablet
no flags
Patch (14.21 KB, patch)
2017-06-07 19:58 PDT, youenn fablet
no flags
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 (1.26 MB, application/zip)
2017-06-07 20:39 PDT, Build Bot
no flags
Patch (15.04 KB, patch)
2017-06-07 20:45 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-06-06 19:10:00 PDT
youenn fablet
Comment 2 2017-06-06 19:10:40 PDT
Will r? when bug 172859 is fixed.
youenn fablet
Comment 3 2017-06-07 19:58:45 PDT
Build Bot
Comment 4 2017-06-07 20:39:42 PDT
Comment on attachment 312267 [details] Patch Attachment 312267 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3891534 New failing tests: fast/mediastream/getUserMedia-grant-persistency.html
Build Bot
Comment 5 2017-06-07 20:39:43 PDT
Created attachment 312272 [details] Archive of layout-test-results from ews104 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
youenn fablet
Comment 6 2017-06-07 20:45:02 PDT
WebKit Commit Bot
Comment 7 2017-06-08 09:28:43 PDT
Comment on attachment 312273 [details] Patch Clearing flags on attachment: 312273 Committed r217930: <http://trac.webkit.org/changeset/217930>
WebKit Commit Bot
Comment 8 2017-06-08 09:28:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.